agregando mi nombre y mi foto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Pinterest</title>
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+    <h1>Gerardo Chacón Álvarez</h1>
+        <img src="./IMG-20220209-WA0013 copy.jpeg">
 </body>
 </html>
