Subiendo mis cambios

--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 </head>
 <body>
     <h1>Hola Mundo</h1>
+
+    <section class="grid">
+        <h2>Carlos Ivan Garcia Fougerat</h2>
+        <img src="./images/ivan.jpg" alt="">
+    </section>
+    
 </body>
 </html>
