--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>Hola Mundo</h1>
+    <img class="logo" src="https://www.vw.com.mx/idhub/etc/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/img/vw-logo-2x.png" alt="VW logo">
 </body>
 </html>
