--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Pinterest</title>
+    <title>pinterest</title>
+     
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+    <h1>hola Mundo</h1>
+    <h2>SANTI</h2>
+    <p>hola a todos mi nombre es santiago rivera <br>
+    soy estudiante de la escuela DEV.F y estoy <br>
+muy feliz de hacer parte de ella gracias.. </p>
+    <img src="santi.jpg" width="200px" height="400px">
 </body>
 </html>
