Espero se vean los cambios

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <h1>Hola Mundo</h1>
+      <img src="./pexels-anna-tarazevich-5763583.jpg" alt="Perritos bonitos">
+      <p>Ojala no me reprueben</p>
 </body>
 </html>
