suviendo mi branch

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="styles.css">
     <title>Pinterest</title>
 </head>
+
 <body>
-    <h1>Hola Mundo</h1>
+    <img src="https://cdn.pixabay.com/photo/2022/08/21/15/44/super-car-7401603__340.jpg">
+<p>saludos compañeros</p>
 </body>
 </html>
