--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Pinterest</title>
 </head>
 <body>
+       <h1>Hola Mundo</h1>
+    <img src="https://www.wikihow.com/images/thumb/a/a3/Draw-Mario-Characters-Step-22.jpg/v4-728px-Draw-Mario-Characters-Step-22.jpg" alt="Mario Bros">
+    <p>Nestor Chaparro Murillo</p>
     <h1>Hola Mundo</h1>
 </body>
 </html>
